kube/networkpolicy-external.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-network-policy-external-refugee-loan
spec:
  podSelector:
    matchLabels:
      name: refugee-loan
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-external
      ports:
        - protocol: TCP
          port: 8080
